--- a/git.html
+++ b/git.html
@@ -11,7 +11,7 @@
 <header>
   <div class="heroImage">
     <div class="heroTexte">
-      <h2> Java </h2>
+      <h2> Git </h2>
     </div>
   </div>
 </header>
