rajout de git dans le menu

--- a/css.html
+++ b/css.html
@@ -25,6 +25,7 @@
     <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
     <div class="element"> <a href="python.html">PYTHON</a> </div>
     <div class="element"> <a href="java.html">JAVA</a> </div>
+    <div class="element"> <a href="java.html">GIT</a> </div>
   </nav>
 </div>
 
