--- a/java.html
+++ b/java.html
@@ -25,7 +25,7 @@
     <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
     <div class="element"> <a href="python.html">PYTHON</a> </div>
     <div class="element"> <a href="java.html">JAVA</a> </div>
-    <div class="element"> <a href="java.html">GIT</a> </div>
+    <div class="element"> <a href="git.html">GIT</a> </div>
   </nav>
 </div>
 
