--- a/git.html
+++ b/git.html
@@ -32,6 +32,7 @@
 <section id="principal">
 
 <p> <em>Git</em> est un logiciel de versionnement de code qui fonctionne avec un système d'arborescence à partir d'une branche master. <em>Git</em> fait constamment le lien entre un repository local et un repository hébergé par <em>GitHub</em>. Un repository est un dossier qui est configuré pour travailler avec <em>git</em>.</p>
+<p><em>GitHub</em> est un serveur qui permet de créer et stocker des repositories en utilisant les fonctionnalités de <em>git</em>.</p>
 
 <hr>
 
@@ -45,9 +46,9 @@
 
 <hr>
 
-<!-- LIGNE DE COMMANDE -->
+<!-- LIGNES DE COMMANDE -->
 
-<h3>Ligne de commande</h3>
+<h3>Lignes de commande</h3>
 
 <table>
   <tr> <th> Objectif <em>monFichier</em> </th> <th> Instruction</th> </tr>
@@ -110,6 +111,8 @@ git push origin master</pre>
 
 <p>Pour consulter l'historique :</p>
 <pre>git log</pre>
+
+<p>On peut se positionner à un moment de l'historique en ne tenant compte que des commit enregistrés jusqu'à un commit défini. On utilise alors <strong>git checkout codeCommit</strong> oû <em>codeCommit</em> est le code sha présent dans le log et représentatif d'un unique commit. A partir de cette requête, <strong>git log</strong> n'affiche que les commit enregistrés jusqu'au commit <em>codeCommit</em>. Pour revenir à l'état du dernier commit, on utilise l'instruction <strong>git checkout master</strong>.
 
 </section>
 
