--- a/git.html
+++ b/git.html
@@ -38,9 +38,9 @@
 
 <p style="font-weight:bold"> Table des matières :
   <ul>
+    <li> <a href="#balise">Lignes de commande</a> </li>
     <li> <a href="">Configuration</a> </li>
     <li> <a href="#structure">Principales instructions</a> </li>
-    <li> <a href="#balise">Ligne de commande</a> </li>
   </ul>
 </p>
 
