--- a/python.html
+++ b/python.html
@@ -86,6 +86,8 @@
   <p>En Python, les mots clés à ne pas utiliser comme nom de variable ou de fonction sont les suivants:<br>
     <strong>and, or, del, from, none, as, global, nonlocal, try, assert, else, if, elif, not, while, for, except, import, with, class, true, false, in, pass, yield, continue, break, finally, is, raise, def, lambda, return</strong>.</p>
 
+  <p>La programmation en Python nécessite l'utilisation d'un environnement de développement IDE. Dans le cas de l'utilisation d'Atom, il convient d'installer dnas la rubrique <em>Settings</em> d'Atom les packages <em>autocomplete-python</em> pour l'autocomplétion, <em>linter-flake8</em> pour la correction syntaxique, <em>python-autopep8</em> pour le respect des normes et <em>script</em> pour exécuter le code.</p>
+
 <hr>
 
 <!-- ===== IMPORTER UN PACKAGE ===== -->
