--- a/python.html
+++ b/python.html
@@ -94,15 +94,15 @@
 
     <p>Il est souvent nécessaire de placer en début de code le chemin absolu de l'interpréteur, puis de préciser l'encodage (ici 3.7 représente la version de Python):</p>
     <pre>#!/usr/bin/python3.7
-    # -*-coding:Utf-8 -*</pre>
+# -*-coding:Utf-8 -*</pre>
     <p>Remarquons que l'encodate utf8 est natif sous Atom.</p>
 
-  <h4>Particularité du système Windows</p>
+  <h4>Particularité du système Windows</h4>
 
     <p>Il est nécessaire de mettre en pause le programme en fin d'exécution afin de pouvoir lire le résultat. Préciser l'encodage peut s'avérer nécessaire sous Windows.</p>
     <pre># -*-coding:Latin-1 -*
 import os
-# programme
+# le programme se trouve ici
 os.system("pause")</pre>
 
 <hr>
