rajout de c.html

--- a/c.html
+++ b/c.html
@@ -11,7 +11,7 @@
 <header>
   <div class="heroImage">
     <div class="heroTexte">
-      <h2> Java </h2>
+      <h2> Python </h2>
     </div>
   </div>
 </header>
@@ -32,8 +32,35 @@
 
 <section id="principal">
 
-<p> A venir</p>
+  <hr>
 
+  <!-- ===== HELLO WORLD ===== -->
+
+  <h3>Hello world</h3>
+
+  <p>Commençons par le traditionnel "Hello world".</p>
+  <pre>#include &ltstdio.h&gt
+#include &ltstdlib.h&gt
+
+int main(int argc, char*argv[]){
+  printf("Hello world");
+  return 0;
+}</pre>
+
+  <hr>
+
+  <!-- ===== GENERALITES ===== -->
+
+  <h3> Généralités </h3>
+
+    <p>Les fichiers C ont pour extension <em>.c</em></p>
+
+    <p>L'installation de librairies se fait à l'aide de l'instruction <strong>#include <nomLibrairie></strong>.</p>
+
+      \n saut de ligne
+
+    <p>En C, chaque fonction renvoie une fois terminé une valeur. En pratique 0 signifie que tout s'est bien passé.</p>
+    <p>Pour exécuter C avec Atom, on peut utiliser le package <strong>gpp-</strong>. La touche F5 lance l'exécution.</p>
 </section>
 
 <footer>
