--- a/python.html
+++ b/python.html
@@ -25,6 +25,7 @@
     <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
     <div class="element"> <a href="python.html">PYTHON</a> </div>
     <div class="element"> <a href="java.html">JAVA</a> </div>
+    <div class="element"> <a href="c.html">C</a> </div>
     <div class="element"> <a href="git.html">GIT</a> </div>
   </nav>
 </div>
@@ -80,6 +81,8 @@
 <!-- ===== GENERALITES ===== -->
 
 <h3> Généralités </h3>
+
+  <p>Les fichiers Python ont pour extension <em>.py</em></p>
 
   <p>Les commentaires sont indiqués à l'aide de <strong>#</strong> pour une seule ligne ou <strong>"""   """</strong> pour plusieurs lignes.</p>
 
