--- a/python.html
+++ b/python.html
@@ -596,8 +596,16 @@ let unAutreObjet = Object.create(monObjet);</pre>
 
   <table>
     <tr><th>Instruction</th><th>Effet obtenu</th></tr>
-    <tr><td>floor(nb)</td><td>le plus grand entier inférieur ou égal à nb</td></tr>
-    <tr><td>ceil(nb)</td><td>le plus petit entier supérieur ou égal à nb</td></tr>
+    <tr><td>floor(x)</td><td>plus grand entier inférieur ou égal à x</td></tr>
+    <tr><td>ceil(x)</td><td>plus petit entier supérieur ou égal à x</td></tr>
+    <tr><td>fabs(x)</td><td>valeur absolue de x</td></tr>
+    <tr><td>factorial(x)</td><td>factorielle de x. Lève une exception ValueError si x n'est pas entier ou si x est négatif</td></tr>
+    <tr><td>fsum(maListe)</td><td>valeur exacte de la somme des valeurs d'une liste</td></tr>
+    <tr><td>gcd(a, b)</td><td>pgdc de a et b</td></tr>
+    <tr><td>exp(x)</td><td>exponentielle de x</td></tr>
+    <tr><td>log1p(x)</td><td>logarithme en base e de x</td></tr>
+    <tr><td>pow(x, y)</td><td>x puissance y</td></tr>
+    <tr><td>sqrt(x)</td><td>racine carrée de x</td></tr>
   </table>
 
 <hr>
