--- a/python.html
+++ b/python.html
@@ -606,6 +606,22 @@ let unAutreObjet = Object.create(monObjet);</pre>
     <tr><td>log1p(x)</td><td>logarithme en base e de x</td></tr>
     <tr><td>pow(x, y)</td><td>x puissance y</td></tr>
     <tr><td>sqrt(x)</td><td>racine carrée de x</td></tr>
+    <tr><td>acos(x)</td><td>arc cosinus de x en radians</td></tr>
+    <tr><td>asin(x)</td><td>arc sinus de x en radians</td></tr>
+    <tr><td>atan(x)</td><td>arc tangente de x en radians</td></tr>
+    <tr><td>cos(x)</td><td>cosinus de x pour x en radians</td></tr>
+    <tr><td>sin(x)</td><td>sinus de x pour x en radians</td></tr>
+    <tr><td>tan(x)</td><td>tangente de x pour x en radians</td></tr>
+    <tr><td>degrees(x)</td><td>convertit l'angle x de radians en degrés</td></tr>
+    <tr><td>radians(x)</td><td>convertit l'angle x de degrés en radians</td></tr>
+    <tr><td>acosh(x)</td><td>arc cosinus hyperbolique de x</td></tr>
+    <tr><td>asinh(x)</td><td>arc sinus hyperbolique de x</td></tr>
+    <tr><td>atanh(x)</td><td>arc tangente hyperbolique de x</td></tr>
+    <tr><td>cosh(x)</td><td>cosinus hyperbolique de x</td></tr>
+    <tr><td>sinh(x)</td><td>sinus hyperbolique de x</td></tr>
+    <tr><td>tanh(x)</td><td>tangente hyperbolique de x</td></tr>
+    <tr><td>pi</td><td>pi = 3,14</td></tr>
+    <tr><td>e</td><td>e = 2,71</td></tr>
   </table>
 
 <hr>
