rajout des commandes vim

--- a/git.html
+++ b/git.html
@@ -253,6 +253,12 @@ Ainsi, les variables de configuration devront être déplacées dans un fichier 
 <p>Il faut créer un fichier <em>.gitignore</em> et placer dans ce fichier le nom de tous les fichiers qui devront être ignorés par le versionnement.</p>
 <pre>touch .gitignore</pre>
 
+<p>Pour écrire dans ce fichier <em>.gitignore</em>, il faut ouvrir l'éditeur de terminal <em>vim</em> :</p>
+<pre>vim .gitignore</pre>
+
+<p>Pour sortir de <em>vim</em> :</p>
+<pre>:q</pre>
+
 </section>
 <footer>
 </footer>
