rajout de la section variables

--- a/python.html
+++ b/python.html
@@ -46,7 +46,7 @@
 
 <hr>
 
-<p style="font-weight:bold"> Table des matières :
+<p style="font-weight:bold"> Table des matières :</p>
   <ul>
     <li> <a href="#">Hello world</a> </li>
     <li> <a href="#">Généralités</a> </li>
@@ -65,7 +65,6 @@
     <li> <a href="#">Le package JSON</a> </li>
     <li> <a href="#">Les exceptions</a> </li>
   </ul>
-</p>
 
 <hr>
 
